--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,8 @@
     <section class="intro">
         <div class="intro-content">
             <h1>Huy Lam - Resume</h1>
-            <p>A dedicated project manager with expertise in building scalable systems to promote workplace equity
+            <p>A dedicated project manager / <UX>
+            <UI></UI> with expertise in building scalable systems to promote workplace equity
                 and streamline processes. Experienced in leading cross-functional teams and integrating complex systems.
             </p>
             <a href="#contact" class="btn-outline">Contact Me</a>
@@ -44,7 +45,7 @@
     <section id="contact" class="split-section">
         <div class="text-block">
             <h2>Contact Information</h2>
-            <p>Email: <a href="huylamyg2006@gmail.com">huylamyg2006@gmail.com</a></p>
+            <p>Email: <a href="tuonghuy@yuw.edu">tuonghuy@uw.edu</a></p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/huylam02102006/" target="_blank"
                     rel="noopener">linkedin.com/in/huylam02102006</a></p>
             <p>Location: Seattle, WA</p>
@@ -104,6 +105,11 @@
                 Built a standardized curriculum with timelines and resources, boosting project completion by 15%.<br>
                 Designed weekly progress reports, cutting reporting time by 30% and increasing transparency.
             </li>
+            <li>
+                <strong>Project Management Intern, VISION INTERNATIONAL CO., LTD</strong> <span>– Ho Chi Minh, VN (Jun 2023 – Sep 2023)</span><br>
+                Mapped production processes to identify and remove redundant steps, cutting material waste by 15% and generating $50K in raw material savings.<br>
+                Created standardized project management templates adopted company-wide, reducing project completion time by 10% and streamlining cross-department workflows.
+            </li>
         </ul>
     </section>
 
@@ -112,23 +118,20 @@
         <h2>Skills</h2>
         <div class="cards-grid">
             <div class="card">
-                <h3>Technical Skills</h3>
-                <ul>
-                    <li>Java, R, Ruby, Python, Git, MS Planner, MS 365</li>
-                    <li>Azure DevOps, Jira, Figma, Airtable, Softr, Trello</li>
-                    <li>Azure DevOps, Jira, Figma, Airtable, Softr, Trello</li>
-                    <li>Database Management (MySQL, PostgreSQL)</li>
-                </ul>
+                <h3>Tools & Technologies</h3>
+                <p>Azure DevOps, Jira, Figma, Trello, GitHub, HTML, JSX, React, Microsoft Office, Java, R, Ruby, Python, PostgreSQL, AI Prompting, Microsoft Suite, Microsoft Planner</p>
+            </div>
+            <div class="card">
+                <h3>Hard Skills</h3>
+                <p>Object-Oriented Programming, Agile, Scrum, User Research & Testing, Project Cycle, Human-Centered Design</p>
             </div>
             <div class="card">
                 <h3>Soft Skills</h3>
-                <ul>
-                    <li>Team Leadership & Collaboration</li>
-                    <li>Problem-Solving & Analytical Thinking</li>
-                    <li>Effective Communication & Agile Methodologies</li>
-                    <li>Risk Management & Strategic Planning</li>
-                    <li>Project Management & Resource Allocation</li>
-                </ul>
+                <p>Teamwork, Initiative, Leadership, Organization, Empathy, Creativity, Time Management, Problem Solving, Communication, Adaptability, Critical Thinking, Ambition</p>
+            </div>
+            <div class="card">
+                <h3>Languages</h3>
+                <p>Fluent in English, Fluent in Vietnamese, Conversational in Mandarin</p>
             </div>
         </div>
     </section>
