All tests passing

--- a/resume.html
+++ b/resume.html
@@ -115,7 +115,7 @@
 
     <!-- 5. Skills -->
     <section class="cards-section">
-        <h2>Skills</h2>
+        <h2>Addtional</h2>
         <div class="cards-grid">
             <div class="card">
                 <h3>Tools & Technologies</h3>
