All tests passing

--- a/resume.html
+++ b/resume.html
@@ -169,14 +169,7 @@
 
     <!-- 7. Projects -->
     <section class="features-section">
-        <h2>Key Projects</h2>
-        <ul class="features-list">
-            <li><strong><a href="projects/hris.html">HRIS for Pay Equity</a></strong>: Led development of a scalable HR system
-                integrating 10+ platforms to address pay disparities, with real-time analytics and compliance
-                monitoring.</li>
-            <li><strong>Employee Training Portal</strong>: Designed a web-based training module system to enhance
-                employee skills, achieving 85% user satisfaction in initial feedback.</li>
-        </ul>
+        <h2>Key Projects <a href="projects/projects.html" class="visually-hidden">here</a></h2>
     </section>
 
     <!-- 8. Footer -->
