--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
     <section class="intro">
         <div class="intro-content">
             <h1>Huy Lam - Resume</h1>
-            <p>A dedicated project manager + UX/UI <UX>
+            <p>A dedicated project + UI design manager <UX>
             <UI></UI> with expertise in building scalable systems to promote workplace equity
                 and streamline processes. Experienced in leading cross-functional teams and integrating complex systems.
             </p>
@@ -64,7 +64,7 @@
                 <h3>University of Washington</h3>
                 <p>Bachelor of Science in Informatics, Expected Graduation: December 2025</p>
                 <ul>
-                    <li>Specializing in Information Management and UX/UI Design.</li>
+                    <li>Specializing in Information Management and UX Design.</li>
                     <li>Active member of the Informatics Student Association, organizing tech workshops.</li>
                     <li>Maintained a 3.85/4.0 GPA, earning Dean’s List recognition.</li>
                 </ul>
