--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
     <section class="intro">
         <div class="intro-content">
             <h1>Huy Lam - Resume</h1>
-            <p>A dedicated project + UI design manager <UX>
+            <p>A dedicated project + UX design manager <UX>
             <UI></UI> with expertise in building scalable systems to promote workplace equity
                 and streamline processes. Experienced in leading cross-functional teams and integrating complex systems.
             </p>
