Adjust readme.md, changed logo

--- a/resume.html
+++ b/resume.html
@@ -115,23 +115,76 @@
 
     <!-- 5. Skills -->
     <section class="cards-section">
-        <h2>Addtional</h2>
-        <div class="cards-grid">
-            <div class="card">
-                <h3>Tools & Technologies</h3>
-                <p>Azure DevOps, Jira, Figma, Trello, GitHub, HTML, JSX, React, Microsoft Office, Java, R, Ruby, Python, PostgreSQL, AI Prompting, Microsoft Suite, Microsoft Planner</p>
+        <h2>Technical Skills</h2>
+        <div class="skills-section-redesign">
+            <div class="skill-group">
+                <h3>Design &amp; UX</h3>
+                <div class="skill-badges">
+                    <span>Figma</span>
+                    <span>Adobe XD</span>
+                    <span>Miro</span>
+                    <span>Usability Testing</span>
+                    <span>Wireframing</span>
+                    <span>Prototyping</span>
+                    <span>Heuristic Evaluation</span>
+                    <span>User Journey Mapping</span>
+                </div>
             </div>
-            <div class="card">
-                <h3>Hard Skills</h3>
-                <p>Object-Oriented Programming, Agile, Scrum, User Research & Testing, Project Cycle, Human-Centered Design</p>
+            <div class="skill-group">
+                <h3>Project Management</h3>
+                <div class="skill-badges">
+                    <span>Azure DevOps</span>
+                    <span>Jira</span>
+                    <span>Trello</span>
+                    <span>Microsoft Planner</span>
+                    <span>Agile/Scrum</span>
+                </div>
             </div>
-            <div class="card">
+            <div class="skill-group">
+                <h3>Development</h3>
+                <div class="skill-badges">
+                    <span>HTML</span>
+                    <span>JSX</span>
+                    <span>React</span>
+                    <span>Java</span>
+                    <span>R</span>
+                    <span>Ruby</span>
+                    <span>Python</span>
+                    <span>PostgreSQL</span>
+                    <span>GitHub</span>
+                </div>
+            </div>
+            <div class="skill-group">
+                <h3>Other Tools</h3>
+                <div class="skill-badges">
+                    <span>Microsoft Suite</span>
+                    <span>AI Prompt Engineering</span>
+                </div>
+            </div>
+            <div class="skill-group">
                 <h3>Soft Skills</h3>
-                <p>Teamwork, Initiative, Leadership, Organization, Empathy, Creativity, Time Management, Problem Solving, Communication, Adaptability, Critical Thinking, Ambition</p>
+                <div class="skill-badges">
+                    <span>Teamwork</span>
+                    <span>Initiative</span>
+                    <span>Leadership</span>
+                    <span>Organization</span>
+                    <span>Empathy</span>
+                    <span>Creativity</span>
+                    <span>Time Management</span>
+                    <span>Problem Solving</span>
+                    <span>Communication</span>
+                    <span>Adaptability</span>
+                    <span>Critical Thinking</span>
+                    <span>Ambition</span>
+                </div>
             </div>
-            <div class="card">
+            <div class="skill-group">
                 <h3>Languages</h3>
-                <p>Fluent in English, Fluent in Vietnamese, Conversational in Mandarin</p>
+                <div class="skill-badges">
+                    <span>Fluent in English</span>
+                    <span>Fluent in Vietnamese</span>
+                    <span>Conversational in Mandarin</span>
+                </div>
             </div>
         </div>
     </section>
