--- a/resume.html
+++ b/resume.html
@@ -99,7 +99,7 @@
         <h2>Professional Experience</h2>
         <ul class="features-list">
             <li>
-                <strong>Student Tutor, Highline College</strong> <span>– Seattle, USA (Sep. 2023 – Apr. 2024)</span><br>
+                <strong>Project Coordinator & Teching Assistant, Highline College</strong> <span>– Seattle, USA (Sep. 2023 – Apr. 2024)</span><br>
                 Initiated a mentorship program reducing tutoring time by 20% and promoting collaborative learning.<br>
                 Created a knowledge repository for CS topics used by 50+ students.<br>
                 Built a standardized curriculum with timelines and resources, boosting project completion by 15%.<br>
