--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,7 @@
                 <h3>University of Washington</h3>
                 <p>Bachelor of Science in Informatics, Expected Graduation: December 2025</p>
                 <ul>
-                    <li>Specializing in Information Management and UX Design.</li>
+                    <li>Specializing in Information Management.</li>
                     <li>Active member of the Informatics Student Association, organizing tech workshops.</li>
                     <li>Maintained a 3.85/4.0 GPA, earning Dean’s List recognition.</li>
                 </ul>
@@ -100,10 +100,15 @@
         <ul class="features-list">
             <li>
                 <strong>Teching Assistant, Highline College</strong> <span>– Seattle, USA (Sep. 2023 – Apr. 2024)</span><br>
-                Initiated a mentorship program reducing tutoring time by 20% and promoting collaborative learning.<br>
-                Created a knowledge repository for CS topics used by 50+ students.<br>
-                Built a standardized curriculum with timelines and resources, boosting project completion by 15%.<br>
-                Designed weekly progress reports, cutting reporting time by 30% and increasing transparency.
+                Developed and implemented a weekly online Q&A session for 10 students struggling with course material, which resulted 
+                in an average exam score increase of 8% across all participating students.<br>
+                Coordinated with faculty in weekly meetings to align teaching strategies, exchange best practices, and address student learning challenges.<br>
+               Managed grading records for 30+ students, resulting in zero complaints regarding errors or fairness, achieved 
+                via consistent application of departmental grading policies and transparent communication.<br>
+                Conducted student research using surveys and focus groups to determine key areas where AI tools could enhance learning; 
+                findings fixed the three biggest areas students struggled with.<br>
+                Revised 4+ modules of course materials, addressing identified inconsistencies and refining explanations; 
+                decreased student requests for clarification by 25% across core subject matter areas.<br>
             </li>
             <li>
                 <strong>Project Management Intern, VISION INTERNATIONAL CO., LTD</strong> <span>– Ho Chi Minh, VN (Jun 2023 – Sep 2023)</span><br>
