Resolve merge conflicts

--- a/about.html
+++ b/about.html
@@ -33,10 +33,10 @@
                 <h1>About Me</h1>
                 <div class="profile-container">
                     <div class="profile-image">
-                        <img src="img/china.jpeg" alt="Huy's profile">
+                        <img src="img/grad.jpg" alt="Huy's profile">
                     </div>
                     <div class="bio">
-                        <p>I'm Huy, a 19-year-old Informatics student at the University of Washington with a passion for
+                        <p>I'm Huy, an Informatics student at the University of Washington with a passion for
                             turning complexity into practical solutions. I thrive at the intersection of technology and
                             collaboration, always eager to learn new tools and frameworks. My goal is to build systems
                             that empower others and make information accessible.</p>
@@ -54,10 +54,10 @@
                     </p>
                 </article>
                 <article class="detail-card">
-                    <h2>My Methodology</h2>
+                    <h2>My Work Philosophy</h2>
                     <p>I live by an Agile mindset. I iterate quickly, gather feedback, and refine relentlessly. Empathy
                         and open communication guide everything I do at work and in life. I don’t believe in "work-life
-                        balance"—to me, work is life, and life is work. If I ever feel the two are separate, it means
+                        balance". To me, work is life, and life is work. If I ever feel the two are separate, it means
                         I’m doing something wrong. Instead, I weave my passion for problem-solving, collaboration, and
                         human-centered design into every moment, ensuring each solution is secure, user-friendly, and
                         built to last.</p>
@@ -65,10 +65,10 @@
                 <article class="detail-card">
                     <h2>Fun Facts About Me</h2>
                     <ul>
-                        <li>I speak three languages: English, Vietnamese, and conversational Mandarin, and love the
+                        <li>I speak three languages: English, Vietnamese, and Mandarin, and love the
                             mental stretch of switching between them.</li>
-                        <li>I was born and raised in Saigon’s vibrant south, but childhood visits to my dad’s family in
-                            Taiwan immersed me in traditional Chinese values and shaped my maturity.</li>
+                        <li>I was born and raised in Saigon’s vibrant south, but spent a quite a bit of time living in 
+                            Taiwan.</li>
                         <li>In my free time, you’ll find me weight-training at the gym. It keeps me in peak shape and
                             fuels the stamina I need to move fast in life.</li>
                         <li>I’m a perpetual learner: whether I’m studying Chinese, diving into self-development books,
