--- a/homepage.html
+++ b/homepage.html
@@ -32,9 +32,9 @@
                     <img src="img/china.jpeg" alt="Huy Lam" />
                 </div>
             <div class="hero-content">
-                <h1>Hi, I’m Huy Lam (祥辉)</h1>
-                <p>Crafting innovative solutions through tools, design, and impact.</p>
-                <a href="https://www.linkedin.com/in/huylam02102006/" target="_blank" rel="noopener" class="linkedin-btn">Connect on
+                <h1>Hi, I’m Huy (辉)</h1>
+                <p>Making the impact through actions.</p>
+                <a href="https://www.linkedin.com/in/huylam02102006/"  class="linkedin-btn">Connect on
                     LinkedIn</a>
             </div>
         </section>
