--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
 
     <section class="intro">
         <div class="intro-content">
-            <h1>Huy Lam - Resume</h1>
+            <h1>My Resume</h1>
             <p>A dedicated project + UX Researcher <UX>
             <UI></UI> with expertise in building scalable systems to promote workplace equity
                 and streamline processes. Experienced in leading cross-functional teams and integrating complex systems.
@@ -48,8 +48,8 @@
             <p>Location: Seattle, WA</p>
         </div>
         <div class="image-block">
-            <img src="img/china.jpeg" alt="Profile Placeholder">
-            <p class="image-note">张家界 Mainland China, 2023</p>
+            <img src="img/grad.jpg" alt="Profile Placeholder">
+            <p class="image-note">2025</p>
         </div>
     </section>
 
@@ -61,7 +61,6 @@
                 <p>Bachelor of Science in Informatics, Expected Graduation: December 2025</p>
                 <ul>
                     <li>Specializing in Information Management.</li>
-                    <li>Active member of the Informatics Student Association, organizing tech workshops.</li>
                     <li>Maintained a 3.85/4.0 GPA, earning Dean’s List recognition.</li>
                 </ul>
             </div>
@@ -152,7 +151,6 @@
                 <h3>Other Tools</h3>
                 <div class="skill-badges">
                     <span>Microsoft Suite</span>
-                    <span>AI Prompt Engineering</span>
                 </div>
             </div>
             <div class="skill-group">
